sendKeepAliveMsg