@@ -18,3 +18,25 @@ SplashScreen-Image: SplashScreen.png
 
 # Icon
 [IntelliJ Platform UI Guidelines](https://jetbrains.github.io/ui/resources/icons_list/)
+
+
+# java命令行执行程序解决依赖外部jar包的问题
+用java命令行直接执行程序，如果这个程序需要引用外部jar包。就不能单纯用java xx来执行
+
+如果你的jar包和程序就在一个目录：
+1. 编译
+javac -cp D:\yy\yy.jar,D\xx\xx.jar test.java
+
+2. 执行
+java -cp D:\yy\yy.jar,D\xx\xx.jar test
+但是往往我们依赖的包很多，要一个个填写估计就疯了。所有我们一般会把所有的外部依赖包都放在一个文件夹里，比如在D:\lib
+
+3. 编译
+javac -Djava.ext.dirs=D:\lib test.java
+
+4. 执行
+java  -Djava.ext.dirs=D:\lib test
+
+> 这个方法需要在jdk1.6以上支持
+> 
+>https://blog.csdn.net/w47_csdn/article/details/80254459
